--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,18 +7,37 @@
                     <i class="fa fa-key" aria-hidden="true"></i>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12 login-form">
                     <div class="col-lg-12 login-form">
-                        <form>
+                        <form [formGroup]="logined" (ngSubmit)="onSubmit()">
                             <div class="form-group col-md-4">
-                                <label class="form-control-label">USERNAME</label>
-                                <input type="text" class="form-control" [(ngModel)]="firstName" name="firstName">
+                                <label for="firstName">USERNAME</label>
+                                <input type="text" class="form-control" [(ngModel)]="firstName" id="firstName"
+                                    formControlName="firstName">
+                                <div class="alert alert-danger"
+                                    *ngIf="!logined.get('firstName').valid && logined.get('firstName').touched"
+                                    role="alert">
+                                    <span *ngIf="logined.get('firstName').errors.minlength">name is invalid</span>
+                                    <span *ngIf="logined.get('firstName').errors['required']">field is required</span>
+                                </div>
                             </div>
+
                             <div class="form-group col-md-4">
-                                <label class="form-control-label">PASSWORD</label>
-                                <input type="password" class="form-control" i>
+                                <label for="password">PASSWORD</label>
+                                <input type="password" class="form-control" formControlName="password" name="password"
+                                    id="password">
+                                <div class="alert alert-danger"
+                                    *ngIf="!logined.get('password').valid && logined.get('password').touched"
+                                    role="alert">
+
+                                    <span *ngIf="logined.get('password').errors.minlength"> minlength</span>
+                                    <span
+                                        *ngIf="!logined.get('password').errors.minlength && logined.get('password').errors.pattern">Special
+                                        character is required</span>
+                                    <span *ngIf="logined.get('password').errors['required']">field is required</span>
+
+                                </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="row justify-content-center">
