--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <p>{{userData.firstName}}</p>
 <p>{{userData.email}}</p>
+<p>{{userData.password}}</p>
 
 <!-- <ul>
     <li *ngFor="let userData of userData">
